fix(sidebar/styling): make nested spacing more consistent (#537)

--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -449,8 +449,11 @@
     }
   }
 
-  .nav__items-nested li {
-    font-size: $type-size-5;
+  .nav__items-nested {
+    padding-top: 1em;
+    li {
+      font-size: $type-size-5;
+    }
   }
 
   @include breakpoint(max-width ($large - 1px)) {
