--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -45,7 +45,7 @@
   }
 
   li.collapsed {
-    &.open ul {
+    &.open {
       padding-top: .1em;
     }
 
